import "contrib/libs/protobuf/google/protobuf/descriptor.proto";

package NYT;

extend google.protobuf.FieldOptions
{
    optional string column_name = 56789;
    optional string key_column_name = 56790;
}
